--- a/templates/intro.html
+++ b/templates/intro.html
@@ -40,7 +40,9 @@
             <button type="submit" class="btn btn-primary btn-lg px-5">진단 시작하기</button>
         </form>
 
-        <p class="mt-4 text-secondary" style="font-size: 0.9rem;">이 설문은 필수 항목입니다.</p>
+		<p class="mt-4 text-secondary" style="font-size: 0.9rem;">
+		NHANES(미국 건강영양조사) 데이터를 기반으로 한 알고리즘으로<br>
+		건강 상태를 보다 정확하게 진단합니다.
 		
 		<p class="mt-4 text-secondary" style="font-size: 0.9rem;">
 		이 서비스는 건강 상태를 단순히 예측하는 도구일 뿐이며,<br>
