Upload html files
Upload html files

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -36,7 +36,7 @@
             <li class="list-group-item">✅ 맞춤 식단 및 운동 추천</li>
         </ul>
 
-        <form action="/form" method="get">
+        <form action="/health" method="get">
             <button type="submit" class="btn btn-primary btn-lg px-5">진단 시작하기</button>
         </form>
 
