--- a/templates/report.html
+++ b/templates/report.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="d-flex justify-content-between mt-4">
-        <a href="/form" class="btn btn-secondary">다시 입력하기</a>
+        <a href="/health" class="btn btn-secondary">다시 입력하기</a>
         <a href="/download_report" class="btn btn-primary">PDF 리포트 다운로드</a>
       </div>
     </div>
